[gd_scene format=3 uid="uid://d0jwfmklbjcoo"]

[ext_resource type="Script" uid="uid://b1lxeaxjibabl" path="res://menus/in_game/pause_menu/pause_menu_state.gd" id="1_fhu3k"]

[node name="PauseMenuState" type="Node" unique_id=1626689768]
script = ExtResource("1_fhu3k")

[node name="UI" type="Control" parent="." unique_id=923878578]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI" unique_id=1032521831]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UI/MarginContainer" unique_id=956935648]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"TitleLabel"
text = "PAUSE_LABEL"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer" unique_id=1251177702]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="ResumeBtn" type="Button" parent="UI/MarginContainer/VBoxContainer" unique_id=843270122]
unique_name_in_owner = true
layout_mode = 2
text = "RESUME_LABEL"

[node name="MainMenuBtn" type="Button" parent="UI/MarginContainer/VBoxContainer" unique_id=588914279]
unique_name_in_owner = true
layout_mode = 2
text = "MAIN_MENU_LABEL"

[node name="BackBtn" type="Button" parent="UI/MarginContainer/VBoxContainer" unique_id=1875851933]
unique_name_in_owner = true
layout_mode = 2
text = "BACK_LABEL"
